--- a/main.css
+++ b/main.css
@@ -4,21 +4,25 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-table,
-th,
-td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-
-th,
-td {
-    padding: 15px 20px;
-}
 body{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background: #7fadfc;
+}
+table{
+    background: #f1f5f7;
+    border-radius: 30px;
+}
+/* table, */
+table,
+th,
+td {
+    border-collapse: collapse;
+    border: 1px solid #7fadfc;
+}
+th,
+td {
+    padding: 15px 20px;
 }
